--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           path: |
             ~/.cache/pypoetry
             ~/.cache/pip
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
+          key: ${{ runner.os }}-poetry-${{ hashFiles('backend/poetry.lock') }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -32,12 +32,14 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
+        working-directory: ./backend
         run: |
           python -m pip install --upgrade pip
           pip install poetry
           poetry install --no-interaction --no-ansi
 
       - name: Run backend tests
+        working-directory: ./backend
         run: |
           poetry run pytest \
             --maxfail=1 \
@@ -52,7 +54,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: backend-coverage
-          path: coverage.xml
+          path: backend/coverage.xml
 
   # --- Node frontend tests & build -----------------------------
   frontend:
@@ -65,7 +67,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('frontend/package-lock.json') }}
 
       - name: Use Node.js 18
         uses: actions/setup-node@v4
@@ -97,4 +99,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: frontend-dist
-          path: ./frontend/dist
+          path: frontend/dist
