--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,31 +15,34 @@ jobs:
   backend:
     name: 🐍 Backend (Python) Tests
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
+
     steps:
       - uses: actions/checkout@v4
 
-      # Cache poetry & pip
-      - uses: actions/cache@v3
+      # Cache Poetry & pip
+      - name: Cache Python deps
+        uses: actions/cache@v3
         with:
           path: |
             ~/.cache/pypoetry
             ~/.cache/pip
           key: ${{ runner.os }}-poetry-${{ hashFiles('backend/poetry.lock') }}
 
-      - name: Set up Python
+      - name: Set up Python 3.12
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
 
       - name: Install dependencies
-        working-directory: ./backend
         run: |
           python -m pip install --upgrade pip
           pip install poetry
           poetry install --no-interaction --no-ansi
 
       - name: Run backend tests
-        working-directory: ./backend
         run: |
           poetry run pytest \
             --maxfail=1 \
@@ -47,56 +50,15 @@ jobs:
             -q \
             --junitxml=backend-test-results.xml \
             --cov=. \
-            --cov-report xml:coverage.xml
+            --cov-report=xml
+
+      - name: Upload backend test results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: backend-test-results
+          path: backend-test-results.xml
 
       - name: Upload backend coverage report
         if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-coverage
-          path: backend/coverage.xml
-
-  # --- Node frontend tests & build -----------------------------
-  frontend:
-    name: ⚛️ Frontend (React) Tests & Build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      # Cache npm
-      - uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('frontend/package-lock.json') }}
-
-      - name: Use Node.js 18
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        working-directory: ./frontend
-        run: npm ci
-
-      - name: Run lint & tests
-        working-directory: ./frontend
-        run: |
-          npm run lint
-          npm test -- --coverage --coverageReporters=text-lcov
-
-      - name: Upload frontend coverage report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-coverage
-          path: frontend/coverage/lcov.info
-
-      - name: Build production bundle
-        working-directory: ./frontend
-        run: npm run build
-
-      - name: Upload production build as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-dist
-          path: frontend/dist
+        uses: actions/upload
