--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,49 +15,43 @@ jobs:
   backend:
     name: 🐍 Backend (Python) Tests
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Cache Python deps
-        uses: actions/cache@v3
+      # Cache Poetry & Pip
+      - uses: actions/cache@v3
         with:
           path: |
             ~/.cache/pypoetry
             ~/.cache/pip
           key: ${{ runner.os }}-poetry-${{ hashFiles('backend/poetry.lock') }}
 
-      - name: Set up Python 3.12
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
 
       - name: Install dependencies
+        working-directory: ./backend
         run: |
           python -m pip install --upgrade pip
           pip install poetry
           poetry install --no-interaction --no-ansi
 
       - name: Run backend tests
+        working-directory: ./backend
         run: |
-          poetry run pytest --maxfail=1 --disable-warnings -q \
+          poetry run pytest \
+            --maxfail=1 \
+            --disable-warnings \
+            -q \
             --junitxml=backend-test-results.xml \
-            --cov=. --cov-report=xml
-
-      - name: Upload backend test results
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: backend-test-results
-          path: backend/backend-test-results.xml
+            --cov=backend \
+            --cov-report xml:coverage.xml
 
       - name: Upload backend coverage report
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: backend-coverage
           path: backend/coverage.xml
@@ -66,16 +60,11 @@ jobs:
   frontend:
     name: ⚛️ Frontend (React) Tests & Build
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Cache NPM
-        uses: actions/cache@v3
+      # Cache npm
+      - uses: actions/cache@v3
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('frontend/package-lock.json') }}
@@ -86,25 +75,28 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
+        working-directory: ./frontend
         run: npm ci
 
       - name: Run lint & tests
+        working-directory: ./frontend
         run: |
           npm run lint
-          npm test -- --coverage --coverageReporters=text-lcov
+          npm test -- --coverage --coverageReporters=text-lcov --coverageDirectory=coverage
 
       - name: Upload frontend coverage report
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: frontend-coverage
           path: frontend/coverage/lcov.info
 
       - name: Build production bundle
+        working-directory: ./frontend
         run: npm run build
 
       - name: Upload production build as artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: frontend-dist
           path: frontend/dist
