--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,14 +32,14 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
-        working-directory: backend
+        working-directory: ./backend
         run: |
           python -m pip install --upgrade pip
           pip install poetry
           poetry install --no-interaction --no-ansi
 
       - name: Run backend tests
-        working-directory: backend
+        working-directory: ./backend
         run: |
           poetry run pytest \
             --maxfail=1 \
@@ -75,14 +75,14 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        working-directory: frontend
+        working-directory: ./frontend
         run: npm ci
 
       - name: Run lint & tests
-        working-directory: frontend
+        working-directory: ./frontend
         run: |
           npm run lint
-          npm test -- --coverage --coverageReporters=lcov --coverageDirectory=coverage
+          npm test -- --coverage --coverageReporters=text-lcov --coverageDirectory=coverage
 
       - name: Upload frontend coverage report
         if: always()
@@ -92,7 +92,7 @@ jobs:
           path: frontend/coverage/lcov.info
 
       - name: Build production bundle
-        working-directory: frontend
+        working-directory: ./frontend
         run: npm run build
 
       - name: Upload production build as artifact
