--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,8 +14,9 @@ typing-extensions  = "^4.14.0"
 
 [tool.poetry.dev-dependencies]
 pytest             = "^7.0"
-httpx              = "^0.24"
 pytest-asyncio     = "^0.21"
+pytest-cov         = "^4.0"    
+httpx              = "^0.24"
 
 [build-system]
 requires       = ["poetry-core>=1.8.0"]
