--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,15 +39,17 @@ jobs:
           poetry install --no-interaction --no-ansi
 
       - name: Run backend tests
-        working-directory: ./backend
+        env:
+          POETRY_CACHE_DIR: ~/.cache/pypoetry
+          PYTHONPATH: ./backend
         run: |
-          poetry run pytest \
+          poetry run pytest backend \
             --maxfail=1 \
             --disable-warnings \
             -q \
-            --junitxml=backend-test-results.xml \
+            --junitxml=backend/backend-test-results.xml \
             --cov=backend \
-            --cov-report=xml:coverage.xml
+            --cov-report xml:backend/coverage.xml
 
       - name: Upload backend coverage report
         if: always()
