--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,6 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
-        working-directory: ./backend
         run: |
           python -m pip install --upgrade pip
           pip install poetry
@@ -36,14 +35,14 @@ jobs:
       - name: Run backend tests
         env:
           POETRY_CACHE_DIR: ~/.cache/pypoetry
-          PYTHONPATH: backend
+          PYTHONPATH: .
         run: |
-          poetry run pytest backend/tests \
+          poetry run pytest backend \
             --maxfail=1 \
             --disable-warnings \
             -q \
-            --junitxml=backend/tests/backend-test-results.xml \
-            --cov=backend.main \
+            --junitxml=backend/backend-test-results.xml \
+            --cov=backend \
             --cov-report xml:backend/coverage.xml
 
       - name: Upload backend coverage report
