--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Cache Poetry & pip
       - uses: actions/cache@v3
         with:
           path: |
@@ -49,7 +50,6 @@ jobs:
             --cov=backend.main \
             --cov-report xml:backend/coverage.xml
 
-
       - name: Upload backend coverage report
         if: always()
         uses: actions/upload-artifact@v4
@@ -63,6 +63,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Cache npm
       - uses: actions/cache@v3
         with:
           path: ~/.npm
